Atualização do projeto — sincronização com GitHub